feat(codegen): handle code emission outside of registermanager